[gd_scene load_steps=6 format=3 uid="uid://dnce7iocxnxd4"]

[ext_resource type="Script" path="res://Scripts/RobotBase.gd" id="1_aemv3"]
[ext_resource type="Texture2D" uid="uid://byv56p1cetw4d" path="res://assets/sprites/up-right.png" id="2_5kppx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_osixj"]
radius = 300.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njuhg"]
size = Vector2(10, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_7gnu4"]
radius = 4.0

[node name="BaseTower" type="Node2D"]
script = ExtResource("1_aemv3")

[node name="Range2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range2D"]
visible = false
position = Vector2(5, -2)
rotation = 0.392699
skew = 0.785398
shape = SubResource("CircleShape2D_osixj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.96, 1)
texture = ExtResource("2_5kppx")

[node name="TowerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerArea"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_njuhg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TowerArea"]
position = Vector2(1, -3)
shape = SubResource("CircleShape2D_7gnu4")

[node name="ProjectileDisconect" type="Node" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_exited" from="Range2D" to="." method="_on_range_2d_area_exited"]
[connection signal="body_entered" from="Range2D" to="." method="_on_range_2d_body_entered"]
[connection signal="body_exited" from="Range2D" to="." method="_on_range_2d_body_exited"]
[connection signal="mouse_shape_entered" from="TowerArea" to="." method="_on_tower_area_mouse_shape_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_timer_timeout"]
